WIP, første commit med PDL-kall.
