# src/main/resources/openapi/documentation.yaml
@@ -310,6 +310,11 @@ components:
         fullName:
           type: string
           description: Full name of the person associated with the document.
+        birthDate:
+          type: string
+          format: date
+          description: Birth date of the person (ISO-8601 date format).
+          example: "1990-01-15"
         orgNumber:
           type: string
           description: Organisation number.
@@ -325,7 +330,7 @@ components:
         - type
         - content
         - contentType
-        - f
+        - fnr
         - orgNumber
         - title
         - summary
